Login Page Frontend Changes

--- a/BookApp/Base.lproj/Main.storyboard
+++ b/BookApp/Base.lproj/Main.storyboard
@@ -16,48 +16,49 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Register" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y98-Wx-tKz">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Register" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y98-Wx-tKz">
                                 <rect key="frame" x="130" y="103" width="132" height="56"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="56" id="BeD-ps-Ak2"/>
-                                </constraints>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" borderStyle="roundedRect" placeholder="Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ylV-Ea-RZo">
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" borderStyle="roundedRect" placeholder="Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ylV-Ea-RZo">
                                 <rect key="frame" x="16" y="234" width="361" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <attributedString key="attributedText"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" borderStyle="roundedRect" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="i34-C6-G1u">
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" borderStyle="roundedRect" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="i34-C6-G1u">
                                 <rect key="frame" x="16" y="298" width="361" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <attributedString key="attributedText"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email is not valid" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mg0-3L-h0q">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Email is not valid" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mg0-3L-h0q">
                                 <rect key="frame" x="16" y="351" width="361" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" systemColor="systemRedColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eQP-eC-DWF">
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eQP-eC-DWF">
                                 <rect key="frame" x="16" y="389" width="361" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <attributedString key="attributedText"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password must be between 6-25 characters" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Sn-9P-Ugp">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Password must be between 6-25 characters" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Sn-9P-Ugp">
                                 <rect key="frame" x="16" y="443" width="354" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" systemColor="systemRedColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jxo-PY-Ple">
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jxo-PY-Ple">
                                 <rect key="frame" x="19" y="736" width="354" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemGrayColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="35" id="IC9-6G-IP0"/>
-                                </constraints>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title="Continue"/>
@@ -68,29 +69,6 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="Y98-Wx-tKz" firstAttribute="centerX" secondItem="ylV-Ea-RZo" secondAttribute="centerX" id="0o1-mZ-2LV"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="jxo-PY-Ple" secondAttribute="bottom" constant="47" id="2P0-1l-xPi"/>
-                            <constraint firstItem="Y98-Wx-tKz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="3ea-5Q-UzR"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="1Sn-9P-Ugp" secondAttribute="trailing" constant="23" id="4yf-Cx-Efs"/>
-                            <constraint firstItem="eQP-eC-DWF" firstAttribute="leading" secondItem="1Sn-9P-Ugp" secondAttribute="leading" id="Aow-vj-Ylb"/>
-                            <constraint firstItem="1Sn-9P-Ugp" firstAttribute="top" secondItem="eQP-eC-DWF" secondAttribute="bottom" constant="20" id="AtK-8c-j4G"/>
-                            <constraint firstItem="Mg0-3L-h0q" firstAttribute="trailing" secondItem="eQP-eC-DWF" secondAttribute="trailing" id="Fvq-6S-NDk"/>
-                            <constraint firstItem="i34-C6-G1u" firstAttribute="top" secondItem="ylV-Ea-RZo" secondAttribute="bottom" constant="30" id="KTD-Os-su6"/>
-                            <constraint firstItem="ylV-Ea-RZo" firstAttribute="leading" secondItem="i34-C6-G1u" secondAttribute="leading" id="L9p-Zc-1C6"/>
-                            <constraint firstItem="ylV-Ea-RZo" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="Sg0-Ln-CNs"/>
-                            <constraint firstItem="eQP-eC-DWF" firstAttribute="top" secondItem="Mg0-3L-h0q" secondAttribute="bottom" constant="17" id="W5m-xf-ETp"/>
-                            <constraint firstItem="jxo-PY-Ple" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="19" id="aS7-yJ-wKu"/>
-                            <constraint firstItem="Mg0-3L-h0q" firstAttribute="leading" secondItem="eQP-eC-DWF" secondAttribute="leading" id="bSU-JW-Lne"/>
-                            <constraint firstItem="Mg0-3L-h0q" firstAttribute="top" secondItem="i34-C6-G1u" secondAttribute="bottom" constant="19" id="cre-RE-Lbc"/>
-                            <constraint firstItem="i34-C6-G1u" firstAttribute="trailing" secondItem="Mg0-3L-h0q" secondAttribute="trailing" id="eOw-VU-1un"/>
-                            <constraint firstItem="i34-C6-G1u" firstAttribute="leading" secondItem="Mg0-3L-h0q" secondAttribute="leading" id="l4l-zn-JTl"/>
-                            <constraint firstItem="Y98-Wx-tKz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="130" id="mSH-Iw-e2Z"/>
-                            <constraint firstItem="ylV-Ea-RZo" firstAttribute="top" secondItem="Y98-Wx-tKz" secondAttribute="bottom" constant="75" id="n6W-1U-LPa"/>
-                            <constraint firstItem="eQP-eC-DWF" firstAttribute="centerX" secondItem="jxo-PY-Ple" secondAttribute="centerX" id="oW9-C6-pxH"/>
-                            <constraint firstItem="ylV-Ea-RZo" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="qJc-bi-Cjl"/>
-                            <constraint firstItem="ylV-Ea-RZo" firstAttribute="trailing" secondItem="i34-C6-G1u" secondAttribute="trailing" id="trd-6J-rJt"/>
-                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="VqA-UQ-2RP"/>
                     <connections>
